# cpra-embedding-search-experiments

./: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
.cache/embeddings/: 18b9f64c8d6aaf96.json  1e3650b0f81c1093.json  a45f45ae8c796e66.json  aefee91f632524fe.json
configs/: models.yaml
configs/experiments/: 001_baseline_keyword.yaml  002_simple_embedding.yaml  003_ollama_nomic.yaml  004_ollama_mxbai.yaml  005_ollama_qwen3_4b.yaml  006_ollama_embeddinggemma.yaml  007_ollama_qwen3_0.6b.yaml  008_st_snowflake_arctic_l_v2.yaml  009_st_snowflake_arctic_m_v2.yaml  010_st_jina_v3.yaml  011_st_bge_m3.yaml  012_st_bge_large_en_v1.5.yaml  013_st_gte_qwen2_1.5b.yaml
docs/experiments/: LOG.md  RESEARCH_AGENDA.md
src/: __init__.py  run_experiment.py
src/data/: __init__.py  corpus.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  reporter.py
src/models/: __init__.py  embeddings.py
src/pipeline/: __init__.py  base.py  embedding.py  keyword.py
