[project]
name = "cpra-embedding-search"
version = "0.1.0"
description = "Experiments in embedding-based document retrieval for CPRA requests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "numpy>=1.26.0",
    "pandas>=2.1.0",

    # Embeddings
    "sentence-transformers>=2.2.0",
    "ollama>=0.3.0",

    # LLM clients (for experimentation)
    "openai>=1.0.0",
    "anthropic>=0.39.0",

    # Evaluation and analysis
    "scikit-learn>=1.3.0",

    # Configuration
    "pyyaml>=6.0",
    "pydantic>=2.0.0",

    # Progress and CLI
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
